# SysMon

./: README.md  pyproject.toml
docs/: design.md
src/: collector.py  display.py  logger.py  main.py  report.py
tests/: test_collector.py  test_logger.py  test_report.py
