[project]
dynamic = ["version"]
name = "SysMon"
description = "A command-line tool that tracks CPU, memory, and disk usage in real time."
authors = [
    {name = "Raz Deri", email = "razderi55@gmail.com"}
]
readme = "README.md"
repository = "https://github.com/snejus/rich-tables"

keywords = ["json", "benchmark", "hardware", "console", "terminal", "logging"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "System :: Benchmark",
    "Topic :: Utilities",
    "Topic :: File Formats :: JSON",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Logging",
    "Environment :: Console",
    "Natural Language :: English",
    "Natural Language :: Hebrew",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
dependencies = [
  "psutil",
  "rich",
  "time",
  "sys",
  "json",
  "datetime",
  "argparse",
  "pathlib",
  "keyboard",
  "os"
]